project wp updates

--- a/wp-content/themes/wp-simple/style.css
+++ b/wp-content/themes/wp-simple/style.css
@@ -4,8 +4,8 @@ Theme URI: http://nimbusthemes.com/wordpress-themes/simple/
 Description: As its name suggests, the Simple theme is intended to provide a simple, clean, minimal layout from which you can develop your website. Fully responsive and based on the newest release of the Bootstrap 3 mobile-first, front-end framework, the Simple theme will transform effortlessly from desktop-width monitors to tablets and smartphones. An array of theme options allows for customization of nearly every color, feature, and element across the theme. The Simple theme is translation-ready, cross-browser tested, search engine optimized, includes a full-page-width page template, offers infinite color combinations, displays custom featured posts, and is compatible with most popular plugins. 
 Author: Nimbus Themes
 Author URI: http://nimbusthemes.com/
-Version: 1.0.9
-Tags: black, blue, gray, silver, white, dark, light, one-column, two-columns, three-columns, four-columns, right-sidebar, flexible-width, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready
+Version: 1.1.0
+Tags: black, blue, gray, silver, white, dark, light, one-column, two-columns, three-columns, four-columns, right-sidebar, fluid-layout, custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-image-header, featured-images, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, responsive-layout
 License: GNU General Public License
 License URI: license.txt
 */
